[package]
name = "systemair-save-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive", "error-context"] }
comfy-table = "7.1.3"
csv-core = "0.1.11"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
homie-device = "0.9.0"
humantime = "2.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs"] }
tokio-util = { version = "0.7.12", features = ["codec", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
