[package]
name = "systemair-save-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive", "error-context"] }
comfy-table = "7.1.3"
csv-core = "0.1.11"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
humantime = "2.1.0"
rumqttc = { version = "0.22", features = ["url"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio-util = { version = "0.7.12", features = ["codec", "rt", "time"] }
tokio = { version = "1.41.1", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
homie5 = { version = "0.8.0" }
strum = { version = "0.26.3", features = ["derive"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
